# laravel-i18n-refactor

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README-ja.md  README.md  exclude-dict.txt  exclude-dict.txt.sample  pyproject.toml
.github/: copilot-instructions.md
.serena/: project.yml
Documents/: pypiリリース方法.md  システム仕様書.md  プロンプト最適化.md  開発環境.md
dict/: embed-exclude-dict.txt
src/refactor/: __init__.py  main.py
src/refactor/actions/: __init__.py  extract.py  translate.py
src/refactor/data_models/: __init__.py  extracted_string.py  string_occurrence.py
src/refactor/mods/: __init__.py  blade_processor.py  php_processor.py  prompt_builder.py  string_collector.py
src/refactor/providers/: __init__.py  anthropic_compat_provider.py  anthropic_provider.py  base.py  base_provider.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_compat_provider.py  openai_provider.py
src/refactor/utils/: __init__.py  exclusion_dict.py  file_finder.py  output_formatter.py  php_analyzer.py  php_string_extractor.py  string_collector.py  string_processor.py  string_validator.py
